Version 1.8.2+svn:
 * Language and i18n:
   * Updated translations: French, Galician, German, Japanese, Slovak,
     Vietnamese
 * Miscellaneous and bug fixes:
   * Prevent dereferencing freed memory when reporting malformed maps, i.e.
     when using an invalid terrain type
   * Fixed bug #16171: Disable commands during [animate_unit]

Version 1.8.2:
 * Campaigns:
   * An Orcish Incursion:
     * Made 'Valley of Trolls' easier on the easiest difficulties.
   * Descent into Darkness:
     * 'A Small Favor' (part 1) now gives an early finish bonus.
   * Eastern Invasion:
     * Made it slightly easier to rescue the knights in 'Mal-Ravanal's Capital'
   * Liberty:
     * Fixed bug #16091: Removed unknown unit type from recruit list
     * Fixed the village approach dialogue in the first scenario not triggering
       right
   * Northern Rebirth:
     * Fixed "scenario 'Showdown' not found" error
   * The South Guard:
     * A new set of story art by Scavenger
   * Under the Burning Suns:
     * Fixed scouts sometimes not appearing in the first scenario
     * Fixed broken transparancy for several images
 * Language and i18n:
   * Updated translations: Chinese (Simplified), French, Galician, German,
     Hungarian, Italian, Japanese, Latvian, Polish, Russian, Serbian, Slovak, Spanish
 * Music:
   * Replacement for "Northerners" by Stephen Rozanc
 * Miscellaneous and bug fixes:
   * Added an internal command 'unsafe_lua' for enabling remote debugging.
   * Allow multi-argument image path functions to work in the unit overlays list
   * Fixed bug #15701: Added an advanced preference for disabling desktop
     notifications
   * Fixed bug #15889: Removed backward [status]hidden, replaced it with
     [status]uncovered for stricking units
   * Fixed bug #15960: When warning the player about installing add-ons with
     missing dependencies, make 'OK' and 'Cancel' work as expected
   * Fixed bug #16020: Trim invalid utf-8 before passing it to pango, fixing a